Worked on API tests